force-app/main/default/objects/Invoice_Line_Item__c/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <formula>Text(Opportunity_Name__r.Account.Account_Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Classification</label>
    <type>Text</type>
</CustomField>