force-app/main/default/objects/Invoice_Line_Item__c/fields/Balance_Amount_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_Taxable__c</fullName>
    <formula>Value(Text(Invoice_Taxable_Amount__c - Taxable_Advance_Received_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount Taxable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>