force-app/main/default/objects/Invoice_Line_Item__c/fields/Balance_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Taxable_Amount__c</fullName>
    <formula>Invoice_Taxable_Amount__c - Taxable_Advance_Received_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Taxable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>