force-app/main/default/objects/Invoice_Line_Item__c/fields/Batch_Update__c.field-meta.xml
<CustomField>
    <fullName>Batch_Update__c</fullName>
    <label>Batch Update</label>
    <length>12</length>
    <type>Text</type>
</CustomField>