force-app/main/default/objects/Invoice_Line_Item__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <formula>Invoice_No__r.Bill_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Number</label>
    <type>Text</type>
</CustomField>