force-app/main/default/objects/Invoice_Line_Item__c/fields/CGST_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_Balance__c</fullName>
    <formula>CGST_Amount_on_Invoice__c -  CGST_Amount_Recd_on_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST  Amount Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>