force-app/main/default/objects/Invoice_Line_Item__c/fields/CGST_Amount_Recd_on_Invoice_TI__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_Recd_on_Invoice_TI__c</fullName>
    <label>CGST Advance Amount Received (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>