force-app/main/default/objects/Invoice_Line_Item__c/fields/CGST_Invoice_Amt_Copy__c.field-meta.xml
<CustomField>
    <fullName>CGST_Invoice_Amt_Copy__c</fullName>
    <description>CGST Rate for Invoice Amount Copy and rollup on Invoice used in reports</description>
    <label>CGST Invoice Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>