force-app/main/default/objects/Invoice_Line_Item__c/fields/CGST_Payable__c.field-meta.xml
<CustomField>
    <fullName>CGST_Payable__c</fullName>
    <formula>CGST_Amount_on_Invoice__c -  CGST_Amount_Recd_on_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>