force-app/main/default/objects/Invoice_Line_Item__c/fields/CGST_Rate_for_Invoice_Amount_Copy__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate_for_Invoice_Amount_Copy__c</fullName>
    <formula>CGST_Rate_for_Invoice_Amount__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Rate for Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>