force-app/main/default/objects/Invoice_Line_Item__c/fields/CGST_Realisable__c.field-meta.xml
<CustomField>
    <fullName>CGST_Realisable__c</fullName>
    <formula>CGST_Amount_Recd_on_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Realisable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>