force-app/main/default/objects/Invoice_Line_Item__c/fields/check_Total_Invoice_Amount_Flag__c.field-meta.xml
<CustomField>
    <fullName>check_Total_Invoice_Amount_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check Total Invoice Amount Flag</label>
    <type>Checkbox</type>
</CustomField>