force-app/main/default/objects/Invoice_Line_Item__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>to store the Contact Name on Invoice</description>
    <formula>Invoice_No__r.Contact_Name__r.FirstName +&apos; &apos;+ Invoice_No__r.Contact_Name__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>