force-app/main/default/objects/Invoice_Line_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>Text(CurrencyIsoCode )</formula>
    <label>Currency</label>
    <type>Text</type>
</CustomField>