force-app/main/default/objects/Invoice_Line_Item__c/fields/Effective_Date_of_Initial_Rating__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Initial_Rating__c</fullName>
    <formula>IF( Opportunity_Name__r.RecordType.Name == &apos;New Business&apos;,Opportunity_Name__r.Last_PR_Date__c,Opportunity_Name__r.Billing_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date of Initial Rating</label>
    <type>Date</type>
</CustomField>