force-app/main/default/objects/Invoice_Line_Item__c/fields/Effective_Date_of_Initial_Rating_TI__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Initial_Rating_TI__c</fullName>
    <label>Effective Date of Initial Rating(Locked)</label>
    <type>Date</type>
</CustomField>