force-app/main/default/objects/Invoice_Line_Item__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <formula>Invoice_No__r.Check_Current_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year</label>
    <type>Text</type>
</CustomField>