force-app/main/default/objects/Invoice_Line_Item__c/fields/Gross_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount_Received__c</fullName>
    <formula>Taxable_Advance_Received_Amount__c  +  CGST_Amount_Recd_on_Invoice__c  +  IGST_Amount_Recd_on_Invoice__c  +  SGST_UTGST_Amount_Recd_on_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>