force-app/main/default/objects/Invoice_Line_Item__c/fields/Gross_Amount_Received_TI__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount_Received_TI__c</fullName>
    <label>Gross Amount Received (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>