force-app/main/default/objects/Invoice_Line_Item__c/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <formula>IF( OR(Account_Classification__c == &apos;Non-SEZ&apos;,Account_Classification__c == &apos;SEZ&apos;, Account_Classification__c == &apos;SEZ Without Tax&apos;),0.18,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>