force-app/main/default/objects/Invoice_Line_Item__c/fields/GST_Rate_Copy__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate_Copy__c</fullName>
    <formula>GST_Rate__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>