force-app/main/default/objects/Invoice_Line_Item__c/fields/IGST_Amount_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_on_Invoice__c</fullName>
    <formula>IF( OR(
    Account_Classification__c == &apos;SEZ Without Tax&apos;,
    Account_Classification__c == &apos;Export&apos;
  ),0,ROUND((Invoice_Taxable_Amount__c * IGST_Rate_for_Invoice_Amount__c),0))</formula>
    <label>IGST Amount on Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>