force-app/main/default/objects/Invoice_Line_Item__c/fields/IGST_for_Invoice_Amt__c.field-meta.xml
<CustomField>
    <fullName>IGST_for_Invoice_Amt__c</fullName>
    <description>IGST Rate for Invoice Amount fields  is rolling up on invoice and used in reports</description>
    <label>IGST for Invoice Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>