force-app/main/default/objects/Invoice_Line_Item__c/fields/IGST_Payable__c.field-meta.xml
<CustomField>
    <fullName>IGST_Payable__c</fullName>
    <formula>IGST_Amount_on_Invoice__c -  IGST_Amount_Recd_on_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>