force-app/main/default/objects/Invoice_Line_Item__c/fields/IGST_Rate_for_Amount_Recd__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate_for_Amount_Recd__c</fullName>
    <formula>IF( Account_Classification__c == &apos;Non-SEZ&apos;,
IF( AND(Opportunity_Name__r.Account.RecordType.Name ==&apos;Issuer&apos;,
TEXT(Opportunity_Name__r.BillingAddress__r.BillingState__c) &lt;&gt; TEXT(Opportunity_Name__r.Opp_ICRA_Branch__r.State__c)
) , 0.18,
IF(AND(Opportunity_Name__r.Account.RecordType.Name ==&apos;Investors &amp; Intermediary&apos;,
Opportunity_Name__r.Account.ShippingState &lt;&gt; TEXT(Opportunity_Name__r.Opp_ICRA_Branch__r.State__c))
, 0.18,
0)),IF(Account_Classification__c == &apos;SEZ&apos;,0.18,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Rate for Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>