force-app/main/default/objects/Invoice_Line_Item__c/fields/Instruments__c.field-meta.xml
<CustomField>
    <fullName>Instruments__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Instrument_type_4__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instruments</label>
    <type>Text</type>
</CustomField>