force-app/main/default/objects/Invoice_Line_Item__c/fields/Instruments_TI__c.field-meta.xml
<CustomField>
    <fullName>Instruments_TI__c</fullName>
    <label>Instruments (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>