force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity_Name__r.Instrument_type_4__c , &apos;Monitoring Activity&apos;) , Opportunity_Name__r.Amount_to_Be_Billed__c,
IF(Opportunity_Name__r.RecordType.Name == &apos;Surveillance&apos;, BLANKVALUE(Opportunity_Name__r.Requested_Fee__c, Opportunity_Name__r.ASF_Final_Amount__c), Opportunity_Name__r.IRF_Final_Amount__c))</formula>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>