force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_TI__c</fullName>
    <label>Invoice Amount (Locked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>