force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Record_Type__c</fullName>
    <formula>Invoice_No__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Record Type</label>
    <type>Text</type>
</CustomField>