force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Taxable_Amount_copy__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Taxable_Amount_copy__c</fullName>
    <description>Invoice Taxable Amount copy is used in rollup to invoice</description>
    <label>Invoice Taxable Amount copy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>