force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Taxable_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Taxable_Amount_TI__c</fullName>
    <label>Invoice Taxable Amount (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>