force-app/main/default/objects/Invoice_Line_Item__c/fields/isFirst_InvoiceLine_Item__c.field-meta.xml
<CustomField>
    <fullName>isFirst_InvoiceLine_Item__c</fullName>
    <formula>Invoice_No__r.isFirst_InvoiceLine_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isFirst InvoiceLine Item</label>
    <type>Checkbox</type>
</CustomField>