force-app/main/default/objects/Invoice_Line_Item__c/fields/Narration_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Narration_for_Invoice__c</fullName>
    <formula>Opportunity_Name__r.Narration_for_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Narration for Invoice</label>
    <type>Text</type>
</CustomField>