force-app/main/default/objects/Invoice_Line_Item__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <formula>IF(
AND(ISPICKVAL(Opportunity_Name__r.Business_Segment__c, &apos;Research&apos;), Opportunity_Name__r.RecordType.Name ==&apos;New Business&apos;),
( Opportunity_Name__r.Subscription_End_Date__c - Opportunity_Name__r.Subscription_Start_Date__c) + 1 ,
(Period_of_Rating_Fees_To_Date__c - Period_of_Rating_Fees_From_Date__c) + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>