force-app/main/default/objects/Invoice_Line_Item__c/fields/No_of_Months__c.field-meta.xml
<CustomField>
    <fullName>No_of_Months__c</fullName>
    <formula>IF((Period_of_Rating_Fees_To_Date__c- Period_of_Rating_Fees_From_Date__c)&gt;0 ,  (Period_of_Rating_Fees_To_Date__c - Period_of_Rating_Fees_From_Date__c) / 30.4167  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>