force-app/main/default/objects/Invoice_Line_Item__c/fields/No_of_Months_TI__c.field-meta.xml
<CustomField>
    <fullName>No_of_Months_TI__c</fullName>
    <label>No of Months (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>