force-app/main/default/objects/Invoice_Line_Item__c/fields/Opportunity_duplicate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_duplicate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity duplicate</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoice Line Items (Opportunity duplicate)</relationshipLabel>
    <relationshipName>Invoice_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>