force-app/main/default/objects/Invoice_Line_Item__c/fields/Opportunity_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RecordType_Name__c</fullName>
    <formula>Opportunity_Name__r.RecordType.Name</formula>
    <label>Opportunity RecordType Name</label>
    <type>Text</type>
</CustomField>