force-app/main/default/objects/Invoice_Line_Item__c/fields/Opportunity_test_md__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_test_md__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity test md</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoice Line Items (Opportunity test md)</relationshipLabel>
    <relationshipName>Invoice_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>