force-app/main/default/objects/Invoice_Line_Item__c/fields/Particulars_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Particulars_of_Service__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Business_Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Particulars of Service</label>
    <type>Text</type>
</CustomField>