force-app/main/default/objects/Invoice_Line_Item__c/fields/Particulars_of_Service_TI__c.field-meta.xml
<CustomField>
    <fullName>Particulars_of_Service_TI__c</fullName>
    <label>Particulars of Service (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>