force-app/main/default/objects/Invoice_Line_Item__c/fields/Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payable_Amount__c</fullName>
    <formula>Total_Amount_for_invoice_Amount__c  -  Gross_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>