force-app/main/default/objects/Invoice_Line_Item__c/fields/Payable_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Payable_Amount_TI__c</fullName>
    <label>Payable Amount (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>