force-app/main/default/objects/Invoice_Line_Item__c/fields/Period_of_Rating_Fees_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Rating_Fees_From_Date__c</fullName>
    <formula>Opportunity_Name__r.Billing_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period of Rating Fees - From Date</label>
    <type>Date</type>
</CustomField>