force-app/main/default/objects/Invoice_Line_Item__c/fields/Period_of_Rating_Fees_From_Date_TI__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Rating_Fees_From_Date_TI__c</fullName>
    <label>Period of Rating Fees-From Date (Locked)</label>
    <type>Date</type>
</CustomField>