force-app/main/default/objects/Invoice_Line_Item__c/fields/Period_of_Rating_Fees_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Rating_Fees_To_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity_Name__r.Revised_Billing_End_Date__c)), Opportunity_Name__r.Revised_Billing_End_Date__c, Opportunity_Name__r.Billing_End_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period of Rating Fees - To Date</label>
    <type>Date</type>
</CustomField>