force-app/main/default/objects/Invoice_Line_Item__c/fields/PR_Date__c.field-meta.xml
<CustomField>
    <fullName>PR_Date__c</fullName>
    <formula>Opportunity_Name__r.PR_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Date</label>
    <type>Date</type>
</CustomField>