force-app/main/default/objects/Invoice_Line_Item__c/fields/Rated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rated_Amount__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Opportunity_Name__r.Size_to_be_rated_this_year_in_Cr_M__c)), 
				Opportunity_Name__r.Size_to_be_rated_this_year_in_Cr_M__c,
				Opportunity_Name__r.VoD_in_crore__c
)</formula>
    <inlineHelpText>If on the Opportunity, user has input Revised Rated VoD, its value will be displayed in the Rated Amount in Invoice Line Item, else, Volume of Debt (in Crore) will be considered.</inlineHelpText>
    <label>Rated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>