force-app/main/default/objects/Invoice_Line_Item__c/fields/Rated_Amount_Locked__c.field-meta.xml
<CustomField>
    <fullName>Rated_Amount_Locked__c</fullName>
    <inlineHelpText>If on the Opportunity, user has input Revised Rated VoD, its value will be displayed in the Rated Amount in Invoice Line Item, else, Volume of Debt (in Crore) will be considered.</inlineHelpText>
    <label>Rated Amount (Locked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>