force-app/main/default/objects/Invoice_Line_Item__c/fields/SGST_Payable__c.field-meta.xml
<CustomField>
    <fullName>SGST_Payable__c</fullName>
    <formula>SGST_UTGST_Amount_on_Invoice__c -  SGST_UTGST_Amount_Recd_on_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>