force-app/main/default/objects/Invoice_Line_Item__c/fields/SGST_UTGST_Amount_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Amount_on_Invoice__c</fullName>
    <formula>ROUND((Invoice_Taxable_Amount__c * SGST_UTGST_Rate_for_Invoice_Amount__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST/UTGST Amount on Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>