force-app/main/default/objects/Invoice_Line_Item__c/fields/SGST_UTGST_Amount_on_Invoice_TI__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Amount_on_Invoice_TI__c</fullName>
    <label>SGST/UTGST Amount on Invoice (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>