force-app/main/default/objects/Invoice_Line_Item__c/fields/SGST_UTGST_Amount_Recd_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Amount_Recd_on_Invoice__c</fullName>
    <formula>Opportunity_Name__r.Payment_Receipt_SGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST/UTGST Advance Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>