force-app/main/default/objects/Invoice_Line_Item__c/fields/SGST_UTGST_Invoice_Amt__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Invoice_Amt__c</fullName>
    <description>SGST/UTGST Rate for Invoice Amount is rolling up on invoice and used in reports</description>
    <label>SGST/UTGST Invoice Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>